formatting the background color

--- a/CSS/guess_name.css
+++ b/CSS/guess_name.css
@@ -7,7 +7,7 @@
 
 html,
 body {
-    background-color: peachpuff;
+    background-color: lightgreen;
     display: flex;
     justify-content: center;
     align-items: center;
