--- a/CSS/guess_name.css
+++ b/CSS/guess_name.css
@@ -7,7 +7,7 @@
 
 html,
 body {
-    background-color: beige;
+    background-color: lightblue;
     display: flex;
     justify-content: center;
     align-items: center;
