addition of paragraff formatting

--- a/CSS/guess_name.css
+++ b/CSS/guess_name.css
@@ -17,6 +17,12 @@ body {
     width: 100vw;
 }
 
+p {
+    display: flex;
+    justify-content: center;
+    font-family: Roboto, Arial, sans-serif;
+    font-size:  15px;
+}
 form {
     border: 5px solid #f1f1f1;
     padding: 20px;
